fixed overflow on phone

--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,7 @@ nav .fa-solid {
 
 .course {
   height: 100em;
+  overflow: hidden;
 }
 
 .course h1 {
